--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 "http://www.w3.org/TR/html4/loose.dtd">
 <html>
   <head>
-  <link rel="stylesheet" href="../style.css" type="text/css">
+  <link rel="stylesheet" href="https://stackedit.io/style.css" type="text/css">
 <title>Introduction to Scheme Programming Language</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   </head>
