--- a/eval-quote.html
+++ b/eval-quote.html
@@ -2,7 +2,7 @@
 "http://www.w3.org/TR/html4/loose.dtd">
 <HTML>
 <HEAD>
-  <link rel="stylesheet" href="../style.css" type="text/css">
+  <link rel="stylesheet" href="https://stackedit.io/style.css" type="text/css">
 <TITLE>フォーム・評価・クォート</TITLE>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 </HEAD>
