rename scheme.html ino index.html

--- a/conditionals.html
+++ b/conditionals.html
@@ -8,7 +8,7 @@
 </HEAD>
 <BODY>
 
-<PRE><A href="listproc.html">[Prev]</A>    <A href="scheme.html">[ Up ]</A>    <A href="recursive.html">[Next]</A></PRE>
+<PRE><A href="listproc.html">[Prev]</A>    <A href="index.html">[ Up ]</A>    <A href="recursive.html">[Next]</A></PRE>
 <HR>
 
 <div class="main">
@@ -132,7 +132,7 @@
 </p>
 </div>
 <HR>
-<PRE><A href="listproc.html">[Prev]</A>    <A href="scheme.html">[ Up ]</A>    <A href="recursive.html">[Next]</A></PRE>
+<PRE><A href="listproc.html">[Prev]</A>    <A href="index.html">[ Up ]</A>    <A href="recursive.html">[Next]</A></PRE>
 
 <div class="footer">
 
