--- a/continuation.html
+++ b/continuation.html
@@ -8,7 +8,7 @@
 </HEAD>
 <BODY>
 
-<pre><a href="environment.html">[Prev]</a>    <a href="scheme.html">[ Up ]</a>    <a href="misc.html">[Next]</a></pre>
+<pre><a href="environment.html">[Prev]</a>    <a href="index.html">[ Up ]</a>    <a href="misc.html">[Next]</a></pre>
 <hr>
 
 <div class="main">
@@ -286,7 +286,7 @@ cを呼び出してはいないので，この関数の値がcall/ccの値にな
 </pre>
 </div>
 <hr>
-<pre><a href="environment.html">[Prev]</a>    <a href="scheme.html">[ Up ]</a>    <a href="misc.html">[Next]</a></pre>
+<pre><a href="environment.html">[Prev]</a>    <a href="index.html">[ Up ]</a>    <a href="misc.html">[Next]</a></pre>
 
 <hr>
 <div class="footer">
