--- a/datatype.html
+++ b/datatype.html
@@ -8,7 +8,7 @@
 </HEAD>
 <BODY>
 
-<PRE><A href="func-var.html">[Prev]</A>    <A href="scheme.html">[ Up ]</A>    <A href="eval-quote.html">[Next]</A></PRE>
+<PRE><A href="func-var.html">[Prev]</A>    <A href="index.html">[ Up ]</A>    <A href="eval-quote.html">[Next]</A></PRE>
 
 <HR>
 
@@ -111,7 +111,7 @@ Schemeで扱うデータは，
 </div>
 <HR>
 
-<PRE><A href="func-var.html">[Prev]</A>    <A href="scheme.html">[ Up ]</A>    <A href="eval-quote.html">[Next]</A></PRE>
+<PRE><A href="func-var.html">[Prev]</A>    <A href="index.html">[ Up ]</A>    <A href="eval-quote.html">[Next]</A></PRE>
 
 <div class="footer">
 
