--- a/environment.html
+++ b/environment.html
@@ -8,7 +8,7 @@
 </HEAD>
 <BODY>
 
-<PRE><A href="lambda.html">[Prev]</A>    <A href="scheme.html">[ Up ]</A>    <A HREF="continuation.html">[Next]</A></PRE>
+<PRE><A href="lambda.html">[Prev]</A>    <A href="index.html">[ Up ]</A>    <A HREF="continuation.html">[Next]</A></PRE>
 
 <HR>
 
@@ -138,7 +138,7 @@ frame1の上位環境は，関数fの環境(=グローバル環境)である．
 </P>
 </div>
 <HR>
-<PRE><A href="lambda.html">[Prev]</A>    <A href="scheme.html">[ Up ]</A>    <A HREF="continuation.html">[Next]</A></PRE>
+<PRE><A href="lambda.html">[Prev]</A>    <A href="index.html">[ Up ]</A>    <A HREF="continuation.html">[Next]</A></PRE>
 
 <hr>
 <div class="footer">
