--- a/eval-quote.html
+++ b/eval-quote.html
@@ -8,7 +8,7 @@
 </HEAD>
 <BODY>
 
-<PRE><A href="datatype.html">[Prev]</A>    <A href="scheme.html">[ Up ]</A>    <A href="s-expression.html">[Next]</A></PRE>
+<PRE><A href="datatype.html">[Prev]</A>    <A href="index.html">[ Up ]</A>    <A href="s-expression.html">[Next]</A></PRE>
 <HR>
 
 <div class="main">
@@ -174,7 +174,7 @@ href="http://www.sci.toyama-u.ac.jp/%7Eiwao/Scheme/r5rsj/html/r5rsj_toc.html">
 
 <HR>
 
-<PRE><A href="datatype.html">[Prev]</A>    <A href="scheme.html">[ Up ]</A>    <A href="s-expression.html">[Next]</A></PRE>
+<PRE><A href="datatype.html">[Prev]</A>    <A href="index.html">[ Up ]</A>    <A href="s-expression.html">[Next]</A></PRE>
 
 <div class="footer">
 
