--- a/further-reading.html
+++ b/further-reading.html
@@ -8,7 +8,7 @@
 </HEAD>
 <BODY>
 
-<PRE><A href="misc.html">[Prev]</A>    <A href="scheme.html">[ Up ]</A>    <A href="scheme.html">[Next]</A></PRE>
+<PRE><A href="misc.html">[Prev]</A>    <A href="index.html">[ Up ]</A>    <A href="index.html">[Next]</A></PRE>
 <HR>
 
 <div class="main">
@@ -29,7 +29,7 @@
 </div>
 <HR>
 
-<PRE><A href="misc.html">[Prev]</A>    <A href="scheme.html">[ Up ]</A>    <A href="scheme.html">[Next]</A></PRE>
+<PRE><A href="misc.html">[Prev]</A>    <A href="index.html">[ Up ]</A>    <A href="index.html">[Next]</A></PRE>
 
 <HR>
 <div class="footer">
