--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 <ul>
 <li> 国内
 <ul>
-<li><a href="http://www.sci.u-toyama.ac.jp/~iwao/Scheme/scheme.html">プログラミング言語Scheme</a>
-<li><a href="http://www7b.biglobe.ne.jp/~saia/scheme.html">プログラミング言語Schemeの解説</a>
+<li><a href="http://www.sci.u-toyama.ac.jp/~iwao/Scheme/index.html">プログラミング言語Scheme</a>
+<li><a href="http://www7b.biglobe.ne.jp/~saia/index.html">プログラミング言語Schemeの解説</a>
 </ul>
 <li> 海外
 <ul>
