--- a/intro.html
+++ b/intro.html
@@ -8,7 +8,7 @@
 </HEAD>
 <body>
 
-<PRE>[Prev]    <A href="scheme.html">[ Up ]</A>    <A href="func-var.html">[Next]</A></PRE>
+<PRE>[Prev]    <A href="index.html">[ Up ]</A>    <A href="func-var.html">[Next]</A></PRE>
 <HR>
 
 <h1>はじめのいっぽ</h1>
@@ -85,7 +85,7 @@ Schemeにおいて，空白は重要な意味を持つ
 </div>
 
 <HR>
-<PRE>[Prev]    <A href="scheme.html">[ Up ]</A>    <A href="func-var.html">[Next]</A></PRE>
+<PRE>[Prev]    <A href="index.html">[ Up ]</A>    <A href="func-var.html">[Next]</A></PRE>
 
 <div class="footer">
 <hr>
