--- a/misc.html
+++ b/misc.html
@@ -8,7 +8,7 @@
 </HEAD>
 <BODY>
 
-<PRE><A href="continuation.html">[Prev]</A>    <A href="scheme.html">[ Up ]</A>    <A href="further-reading.html">[Next]</A></PRE>
+<PRE><A href="continuation.html">[Prev]</A>    <A href="index.html">[ Up ]</A>    <A href="further-reading.html">[Next]</A></PRE>
 <HR>
 
 <div class="main">
@@ -173,7 +173,7 @@ open-*-fileは，ファイルを開いてポートと結び付ける関数．clo
 </div>
 <HR>
 
-<PRE><A href="continuation.html">[Prev]</A>    <A href="scheme.html">[ Up ]</A>    <A href="further-reading.html">[Next]</A></PRE>
+<PRE><A href="continuation.html">[Prev]</A>    <A href="index.html">[ Up ]</A>    <A href="further-reading.html">[Next]</A></PRE>
 
 <HR>
 <div class="footer">
