--- a/s-expression.html
+++ b/s-expression.html
@@ -8,7 +8,7 @@
 </HEAD>
 <BODY>
 
-<PRE><A HREF="eval-quote.html">[Prev]</A>    <A href="scheme.html">[ Up ]</A>    <A HREF="listproc.html">[Next]</A></PRE>
+<PRE><A HREF="eval-quote.html">[Prev]</A>    <A href="index.html">[ Up ]</A>    <A HREF="listproc.html">[Next]</A></PRE>
 
 <HR>
 
@@ -116,7 +116,7 @@ car部，cdr部に入っているS式は矢印で指し示される．
 </div>
 
 <HR>
-<PRE><A HREF="eval-quote.html">[Prev]</A>    <A href="scheme.html">[ Up ]</A>    <A HREF="listproc.html">[Next]</A></PRE>
+<PRE><A HREF="eval-quote.html">[Prev]</A>    <A href="index.html">[ Up ]</A>    <A HREF="listproc.html">[Next]</A></PRE>
 
 <hr>
 <div class="footer">
